# android-rust-java-test

./: Cargo.toml  JavaHelper.java  README.md  build.rs  lib.rs
app/: Cargo.toml  lib.rs
