[package]
name = "android-rust-java-test"
version = "0.1.0"
authors = ["Slint Developers <info@slint.dev>", "wuwbobo2021 <wuwbobo@outlook.com>"]
edition = "2021"
publish = false

[dependencies]
jni = "0.21"
libc = "0.2"
log = "0.4"
ndk = { version = "0.9", features = ["api-level-23"] }
ndk-context = "0.1"
android_logger = "0.14"

[package.metadata.android.sdk]
min_sdk_version = 16
target_sdk_version = 30

[lib]
name = "android_rust_java_test"
path = "lib.rs"
