# Build it with `cargo-apk`.

[package]
name = "android-rust-java-test-apk"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
android-rust-java-test = { path = ".." }
log = "0.4"
android_logger = "0.14"
android-activity = { version = "0.6", features = ["native-activity"] }

[package.metadata.android]
package = "com.example.android_rust_java_test"
build_targets = [ "aarch64-linux-android", "x86_64-linux-android" ]
# resources = "./res"

[package.metadata.android.sdk]
min_sdk_version = 16
target_sdk_version = 30

[lib]
name = "android_rust_java_test_apk"
crate-type = ["cdylib"]
path = "lib.rs"

# [[package.metadata.android.uses_feature]]
# name = "android.hardware.usb.host"
# required = true

# [[package.metadata.android.application.activity.intent_filter]]
# actions = ["android.hardware.usb.action.USB_DEVICE_ATTACHED"]

# [[package.metadata.android.application.activity.meta_data]]
# name = "android.hardware.usb.action.USB_DEVICE_ATTACHED"
# resource = "@xml/device_filter"